portfolio/src/Styles/nav-bar.scss
.nav-bar {
  width: 60px;
  height: 100%;
  position: absolute;
  top: 0;
  z-index: 3;
  min-height: 500px;

  nav {
    display: block;
    text-align: center;
    position: absolute;
    height: 210px;
    top: 50%;
    margin-top: -120px;
    width: 100%;

    a {
      font-size: 22px;
      color: #4d4d4e;
      display: block;
      line-height: 51px;
      height: 51px;
      position: relative;
      text-decoration: none;

      svg {
        color: #ffffff;
      }

      i {
        transition: all 0.3s ease-out;
      }

      &:hover {
        color: gold;
      }
    }
    ul {
      position: absolute;
      bottom: 20px;
      width: 100%;
      display: block;
      padding: 0;
      list-style: none;
      text-align: center;
      margin: 0;

      li {
        a {
          padding: 7px;
          display: block;
          font-size: 30px;
          line-height: 16px;

          &:hover svg {
            color: #fbff00;
          }
        }
      }
    }
  }
}

